# blockchainwares-recruitment

./: .clang-tidy  CMakeLists.txt  README.md
.github/workflows/: build_and_test.yml
include/: abstract_expressions.hpp  abstract_visitor.hpp  eval.hpp  static_expressions.hpp  static_visitor.hpp  utils.hpp
src/: abstract_expressions.cpp  abstract_visitor.cpp  main.cpp  static_expressions.cpp  static_visitor.cpp
tests/: expressions.cpp  visitors.cpp
